--- a/AlertTheCity.html
+++ b/AlertTheCity.html
@@ -49,7 +49,7 @@
         <div class="title">
             <div class="cover">
                 <video autoplay loop controls>
-                    <source src="video/AlertThe City.mkv" type="video/mkv">
+                    <source src="video/AlertTheCity.mp4" type="video/mp4">
                 </video>
 
                 <!-- <a href="https://www.youtube.com/@gunjumpers" target="_blank" rel="noopener noreferrer" class="btn_2">
@@ -81,7 +81,7 @@
                 </div>
                 <div class="contribution">
                     <h1 id="project-title">What part did I do? </h1>
-                    <h2>RTraffic Simulation & AI System<i class="fa fa-caret-down" onclick="hideBlock('reward')"
+                    <h2>Traffic Simulation & AI System<i class="fa fa-caret-down" onclick="hideBlock('reward')"
                             style="cursor:pointer"></i></h2>
                     <div id="reward" style="display: none;">
                         <ul>
@@ -90,11 +90,13 @@
                                 to reroute based on traffic congestion and road conditions. A <code>CarAI</code> and
                                 <code>CarController</code> manage speed, collision avoidance, and honking responses.
                             </li>
-                            <li><strong>Dynamic Object Instantiation:</strong> Rewards like chests and health items are
-                                dynamically instantiated using prefabs at predefined locations, adding variety to the
-                                rewards players encounter​​.
-                                <img src="images/rewardSpawners.png"><br>
-                            </li>
+                            <li><strong>Adaptive Road Management:</strong> Designed <code>ATC_RoadManager</code> and
+                                <code>RoadFixer</code> to configure road types (e.g., intersections, dead-ends)
+                                automatically, optimizing traffic flow. The <code>RoadHelper</code> component ensures
+                                accurate vehicle placement and smooth path transitions.</li>
+                            <li><strong>Car Spawning Variability:</strong> Created <code>ATC_CarSpawner</code> to
+                                introduce randomness in spawn timing and vehicle types, generating organic traffic
+                                patterns and diverse AI behaviors.</li>
                         </ul>
                     </div>
 
