--- a/footer.html
+++ b/footer.html
@@ -1,19 +1,12 @@
-
 <section class="footer" id="footer">
-
-
     <div class="footer-links" id="footerLinks">
-
         <div class="footer-icons">
             <i class="fa fa-github" onclick="location.href = 'https://github.com/lyiyang0702'" style="cursor:pointer"
-                title="source code"></i>
-            <i class="fa fa-envelope" onclick="location.href = 'mailto:lyiyang@ucsc.edu?'" style="cursor:pointer"
-                title="source code"></i>
-            <i class="fa fa-linkedin" onclick="location.href = 'https://www.linkedin.com/in/lyiyang'"
-                style="cursor:pointer" title="source code"></i>
-
+                title="GitHub"></i>
+            <i class="fa fa-envelope" onclick="location.href = 'mailto:lyiyang@ucsc.edu'" style="cursor:pointer"
+                title="Email"></i>
+            <i class="fa fa-linkedin" onclick="location.href = 'https://www.linkedin.com/in/lyiyang'" style="cursor:pointer"
+                title="LinkedIn"></i>
         </div>
-
-
     </div>
 </section>
