--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         href="https://yiyang-lu.itch.io/" target="_blank">Itch</a></p>
             </div>
 
-            <!-- Project Items (Example) -->
+            <!-- Project Items-->
             <div class="project-row">
                 <a href="Dracomaton.html" target="_blank" class="projects-col">
                     <img src="images/DracomatonCover.gif" alt="Dracomaton Project">
