--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!-- Project Items-->
             <div class="project-row">
                 <a href="Dracomaton.html" target="_blank" class="projects-col">
-                    <img src="images/DracomatonCover.gif" alt="Dracomaton Project">
+                    <img src="images/DracomatonCover.gif" alt="Dracomaton">
                     <div class="tags">
                         <p class="tag1">C#</p>
                         <p class="tag2">Unity</p>
@@ -57,13 +57,14 @@
                         <h3 class="project-title">Dracomaton (2023)</h3>
                         <p class="project-role">Gameplay & UI Programmer</p>
                         <p class="project-description">
-                            This project is a 2D Top-down roguelike. I developed part of the core mechanics and its associated systems/UI.
+                            This project is a 2D Top-down roguelike. I developed part of the core mechanics and its
+                            associated systems/UI.
                         </p>
                     </div>
                 </a>
-                
+
                 <a href="AlertTheCity.html" target="_blank" class="projects-col">
-                    <img src="images/ATCCover.gif" alt="Dracomaton Project">
+                    <img src="images/ATCCover.gif" alt="Alert The City">
                     <div class="tags">
                         <p class="tag1">C#</p>
                         <p class="tag2">Unity</p>
@@ -79,7 +80,23 @@
                     </div>
                 </a>
 
-                <a href="FisherGame.html" target="_blank" class="projects-col">
+                <a href="Gull-Tastrophe.html" target="_blank" class="projects-col">
+                    <img src="images/ATCCover.gif" alt="Dracomaton Project">
+                    <div class="tags">
+                        <p class="tag1">C#</p>
+                        <p class="tag2">Unity</p>
+                        <p class="tag3">3D</p>
+                    </div>
+
+                    <div class="project-details">
+                        <h3 class="project-title">Alert The City (2024)</h3>
+                        <p class="project-role">Solo Programmer</p>
+                        <p class="project-description">
+                            This project is a 3D wildfire simulation. I programmed the whole game.
+                        </p>
+                    </div>
+                </a>
+                <!-- <a href="FisherGame.html" target="_blank" class="projects-col">
                     <img src="images/fisher2.gif" alt="Untitled Fisher Game">
                     <div class="tags">
                         <p class="tag1">C#</p>
@@ -94,7 +111,12 @@
                             This project is a 3D Fishing Game. I developed the Vechile System and Dynamic Trash Generation.
                         </p>
                     </div>
-                </a>
+                </a> -->
+            </div>
+            <div class="centered-content">
+                <a href="works.html" target= "_blank" class="btn"> All Projects</a>
+            </div>
+
         </section>
     </main>
 
