--- a/AlertTheCity.html
+++ b/AlertTheCity.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Dracomaton</title>
+    <title>Alert The City</title>
     <script src="utils.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -58,11 +58,10 @@
                 <div class="project-description">
                     <h2>About</h2>
                     <p>Alert the City is a 3D top-down traffic simulation and educational game that teaches players
-                        about wildfire evacuation strategies. Players act as community leaders making critical decisions
+                        about wildfire evacuation. Players act as community leaders making critical decisions
                         during a wildfire evacuation to avoid loss and ensure safety. Each choice directly impacts the
                         evacuation’s final outcome, offering valuable lessons on emergency preparedness and response.
-                        With interactive scenarios and realistic challenges, this game provides a hands-on way to
-                        understand wildfire evacuation planning and safety.</p>
+                    </p>
                 </div>
 
                 <!-- Project Overview Section -->
@@ -71,6 +70,9 @@
                     <p><strong>Role:</strong> Gameplay & UI Programmer</p>
                     <p><strong>Team size:</strong> 2 </p>
                     <p><strong>Engine:</strong> Unity</p>
+                    <p>I’m responsible for coding all the systems in this game and connecting them together. There are
+                        three core systems in this game: Fire simulation, Traffic simulation, and Context-based Options
+                    </p>
                 </div>
             </div>
         </div>
@@ -80,106 +82,70 @@
             <h2>Contributions</h2>
 
             <!-- Item System Contribution -->
-            <h3>Item System</h3>
-            <p>In Dracomaton, items add variety to the gameplay by giving players positive or negative effects that
-                impact their abilities and strategy.</p>
-            <p>I set up the item system’s foundation, including how new items are created, how each item’s unique
-                effects work, and how these effects are applied to the player. Using Unity’s
-                <strong>ScriptableObjects</strong>, I
-                created a <code>BaseItem</code> class as the core for all items, establishing shared behaviors, such as
-                cooldown management, while allowing specific items to have custom logic. This setup uses
-                <strong>inheritance</strong> and
-                <strong>polymorphism</strong> to make the item framework both scalable and adaptable.
+            <h3>Traffic Simulation</h3>
+            <h4>Level Editor</h4>
+            <p>To make level-editing easier, I set up a 3D <strong>grid-based</strong> grid-based map by projecting the 2D grid onto the XZ plane,
+                allowing designers to quickly draw roads and buildings with brush tools like in 2D game using Tilemap
+                tools. Each cell has its own type: Road, Structure, Empty and be stored in the grid
+                for future uses on the road/structure placing.
             </p>
-
+            <div class="contribution-image-container">
+                <img src="images/ATC_LevelEditor.gif" alt="Traffic Simulation Example" class="contribution-image" />
+                <img src="images/Gird.png" alt="Traffic Simulation Example" class="contribution-image" />
+            </div>
+            <h4>Road System</h4>
+            <p>For a more accurate traffic simulation, First I have set up a road system that can dynamically adjust
+                each road assets by checking its neighbour cells direction(left, top, right, down) and rotate/modify the
+                assets to align with the neighbour.
+            </p>
+            <div class="contribution-image-container">
+                <img src="images/ATC_Road.gif" alt="Traffic Simulation Example" class="contribution-image" />
+            </div>
+            <h4>Car AI</h4>
+            <p>Second, I have built a Car AI system that uses a network of <strong>Markers</strong> and an <strong>Adjacency Graph</strong> to navigate
+                the roads. I used an adjacency graph because it efficiently stores bidirectional markers and allows quick retrieval for pathfinding. Each road includes Marker objects that define specific positions and connect to adjacent
+                markers that act as waypoints. These markers are added to an <code>AdjacencyGraph</code> where each Marker becomes a
+                node (<code>Vertex</code>) with connections (<code>edges</code>) to its neighbors. The graph enables the AI to build flexible
+                routes, and an <strong>A*</strong> algorithm calculates the shortest route between two points by evaluating
+                the cost of moving from one marker to the next. This allows cars to handle turns, intersections, and
+                even detours in a realistic way.
+            </p>
             <!-- Contribution Image with Interactive Effect -->
-            <div class="contribution-image-container">
-                <img src="images/ItemOverview.png" alt="Resource System Example" class="contribution-image" />
-                <p class="image-caption">Resource Management System for organizing in-game assets.</p>
+            <div class="contribution-image-container">              
+                <img src="images/ATC_CarMarker.gif" alt="Traffic Simulation Example" class="contribution-image" />
+                <img src="images/ATC_Car AI.gif" alt="Traffic Simulation Example" class="contribution-image" />
+                <p class="image-caption">The red and green markers represent opposite directions, with red lines indicating valid paths between each marker and its neighboring markers</p>
             </div>
 
-            <p>To handle stat changes, I used a <stong>composition</stong> approach with <code>StatsModifier</code>
-                collections that
-                manage each item's status and stats modifiers. These modifiers are dynamically applied or removed when
-                items are equipped, allowing for flexible adjustments to player stats like damage or health.</p>
-
-            <p>Since designers would be working with items too, I designed the system to be easy to adjust directly in
-                Unity’s Inspector. This setup lets designers test and fine-tune item strength just by changing values in
-                the Inspector, making it faster to balance items without needing to touch the code.</p>
-            <div class="contribution-image-container">
-                <img src="images/ItemInspector.png" alt="Resource System Example" class="contribution-image" />
-            </div>
-            <!-- <div class="contribution-image">
-                <img src="images/ItemInspector.png" alt="Item System Example" />
-            </div> -->
-            <!-- Resource System Contribution -->
-            <h3>Resource System</h3>
-            <p>In Dracomaton, random items and rewards appear in different scenarios, such as shops or as rewards after
-                clearing rooms. To manage these dynamic elements efficiently, I developed a <strong>Resource Management
-                    System</strong>
-                as a central controller for all in-game assets, including UI icons, items, VFX, and more. This system
-                acts as a flexible helper function, simplifying resource organization and retrieval for both the
-                <strong>Reward
-                    System</strong> and the <strong>Shop System</strong>.
+            <h3>Fire Simulation</h3>
+            <p>For fire simulation, in order to make the wildfire spreading effect, I used collision to check with
+                structure & nature layer . When fire touches a <code>Combustible</code> object, it gradually decreasing in size using
+                <strong>Lerp</strong> (linear interpolation), which makes the burning simulation feel natural, as if the combustibles
+                burning out over time.
             </p>
-            <p>The <code>ResourcesManager.cs</code> is a singleton class that loads various resources (like prefabs)
-                from project folders into organized lists when the game starts. To keep the codebase clear and
-                maintainable, I used a <strong>partial class</strong> structure that separates each resource type into
-                its own manager.
-                This structure allows for easy access to specific resources through dedicated functions, making it
-                simple to spawn any item as needed. Additionally, each resource manager operates independently, so
-                programmers can create and manage single resource types without cluttering a primary script.</p>
+            <p>To make the fire movement even more realistic, I added a <code>Wind Zone</code> that affects the fire’s speed and
+                direction. The wind move direction changes periodically, giving the fire a natural flow. The wind zone
+                is designed to be easily adjusted as needed by changing its force, speed. range etc.</p>
             <div class="contribution-image-container">
-                <img src="images/rmscript.png" alt="Resource System Example" class="contribution-image" />
-                <img src="images/ResourcesManager.png" alt="Resource System Example" class="contribution-image" />
+                <img src="images/ATC_Fire.gif" alt="Fire Simulation Example" class="contribution-image" />
+                <img src="images/ATC_Wind.gif" alt="Fire Simulation Example" class="contribution-image" />
             </div>
-            <!-- Reward System Contribution -->
-            <h3>Reward System</h3>
-            <p>In Dracomaton, players receive different rewards based on the type of room they complete. For example,
-                completing a health room grants a health potion. As the game progresses, various room types appear, each
-                offering unique rewards.</p>
-            <p>I created a <strong>Reward Spawner</strong> object that stores different reward prefabs, enabling dynamic
-                and specific
-                item drops.</p>
-            <p> When a room is cleared, the Reward Spawner selects the appropriate reward type and checks
-                for nearby available tiles to place the reward. Since tile maps are grid-based, I searched the tiles in
-                a <strong>Spiral Pattern</strong> outward from the player within a specific range. This will help find
-                the nearest
-                available tile by only checking necessary tiles.</p>
-            <div class="contribution-image-container">
-                <img src="images/rewardSpawners.png" alt="Resource System Example" class="contribution-image" />
-                <img src="images/SpiralPattern.png" alt="Resource System Example" class="contribution-image" />
-                <img src="images/dc10.gif" alt="Resource System Example" class="contribution-image" />
-            </div>
-            <p>I implemented a responsive and event-driven reward system using <strong>UnityEvents</strong> and
-                <strong>delegates</strong>. This
-                approach enables the reward spawner to be triggered directly by room events, reducing redundant
-                references and keeping the code structure clean and modular.
-            </p>
 
-            <!-- Shop System Subtitle -->
-            <h4>Shop System</h4>
-            <p>For the Shop System, I was responsible for setting up three items in each shop room, providing players
-                with varied options every time they entered. To achieve this, I created a Shop Item Position Prefab that
-                can be easily placed anywhere in the scene. I also made a dynamic system that allows each shop item
-                position to spawn either randomized or fixed items. The shop system also uses weighted randomization for
-                shop item generation, making rarer items less likely to appear.</p>
+            <h3>Interactive Choice</h3>
+            <p>For player making choices for the community (the core game play) , I used a <code>HouseTypeInfo</code> object to
+                manage each house’s information, including the choices.( <code>HouseChoice</code> class) Each choice serves as a
+                modification to the base properties of the structure, allowing for a flexible and modular approach to
+                customization.
+            </p>
+            <p>To efficiently manage multiple options, I used a dictionary to hold all the choices player selected in a
+                list per house type. This approach allows the UI to retrieve option status with an <strong>O(1)</strong> lookup time,
+                optimizing performance and enabling seamless UI updates. The design supports multi-option menus,
+                allowing players to freely adjust or revert selections before confirming changes, which enhances user
+                experience and control.
+            </p>
             <div class="contribution-image-container">
-                <img src="images/ShopItemController.png" alt="Resource System Example" class="contribution-image" />
-                <img src="images/dc9.gif" alt="Resource System Example" class="contribution-image" />
-            </div>
-            <!-- Mod Menu Subtitle -->
-            <h4>Mod Menu</h4>
-            <p>In Dracomaton, the Mod Menu is a key part of the game’s UI, built to handle two slot types: Form Slots
-                (upper) and Mod Slots (lower). The menu allows players to customize their setup by dragging and swapping
-                forms and mods between these slots.</p>
-            <p>To make sure the UI changes reflected in the gameplay, I used Unity’s Drag and Drop (IDropHandler,
-                IBeginDragHandler, and IDragHandler) Interface with a custom Draggable Item class. I structured the
-                slots into Form Slot and Mod Slots to simplify tracking and syncing the UI with the player's actual
-                equipment status. If an item can’t be equipped, the system displays visual cues to guide the player.</p>
-            <div class="contribution-image-container">
-                <img src="images/dc6.gif" alt="Resource System Example" class="contribution-image" />
-                <img src="images/dc7.gif" alt="Resource System Example" class="contribution-image" />
+                <img src="images/HouseInfo.png" alt="Interactive Choice Example" class="contribution-image" />
+                <img src="images/ATC_HouseMenu.gif" alt="Interactive Choice Example" class="contribution-image" />
             </div>
         </div>
     </section>
