--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
                     </div>
 
                     <div class="project-details">
-                        <h3 class="project-title">Alert The City (2024)</h3>
-                        <p class="project-role">Solo Programmer</p>
+                        <h3 class="project-title">Gull-Tastrophe (2024)</h3>
+                        <p class="project-role">Gameplay Programmer</p>
                         <p class="project-description">
-                            This project is a 3D wildfire simulation. I programmed the whole game.
+                            This project is a 3D Light Action Seagull Game. I developed part of the gameplay and system.
                         </p>
                     </div>
                 </a>
@@ -114,7 +114,7 @@
                 </a> -->
             </div>
             <div class="centered-content">
-                <a href="works.html" target= "_blank" class="btn"> All Projects</a>
+                <a href="AllProjects.html" target= "_blank" class="btn"> All Projects</a>
             </div>
 
         </section>
