--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                 </a>
 
                 <a href="Gull-Tastrophe.html" target="_blank" class="projects-col">
-                    <img src="images/ATCCover.gif" alt="Dracomaton Project">
+                    <img src="images/GullCover.gif" alt="Gull-Tastrophe">
                     <div class="tags">
-                        <p class="tag1">C#</p>
-                        <p class="tag2">Unity</p>
+                        <p class="tag1">C++ & Blueprint</p>
+                        <p class="tag2">Unreal</p>
                         <p class="tag3">3D</p>
                     </div>
 
@@ -92,7 +92,7 @@
                         <h3 class="project-title">Gull-Tastrophe (2024)</h3>
                         <p class="project-role">Gameplay Programmer</p>
                         <p class="project-description">
-                            This project is a 3D Light Action Seagull Game. I developed part of the gameplay and system.
+                            This project is a 3D Light Action-Adventure Seagull Game. I developed part of the gameplay and system.
                         </p>
                     </div>
                 </a>
