--- a/Gull-Tastrophe.html
+++ b/Gull-Tastrophe.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Dracomaton</title>
+    <title>Gull-Tastrophe</title>
     <script src="utils.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -41,15 +41,15 @@
             <!-- Main Media Section (Video) -->
             <div class="project-media">
                 <video autoplay loop controls class="media-video">
-                    <source src="video/dracomaton.mp4" type="video/mp4">
+                    <source src="video/" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <!-- Action Buttons: YouTube, Play Now, GitHub -->
-                <div class="media-buttons">
-                    <!-- <a href="https://www.youtube.com/watch?v=YourVideoID" target="_blank" class="youtube-button">Watch
-                        on YouTube</a> -->
+                <!-- <div class="media-buttons">
+                    <a href="https://www.youtube.com/watch?v=YourVideoID" target="_blank" class="youtube-button">Watch
+                        on YouTube</a>
                     <a href="https://github.com/GunJumpers/GunJumpers" target="_blank" class="github-button"> GitHub</a>
-                </div>
+                </div> -->
             </div>
 
             <!-- About and Project Overview Grouped -->
@@ -57,17 +57,20 @@
                 <!-- About Section -->
                 <div class="project-description">
                     <h2>About</h2>
-                    <p>Dracomaton is a top-down roguelike bullet hell where you swap between multiple playstyles on the
-                        fly. Equip yourself with various Forms that have different strengths and weaknesses, or Mod
-                        existing Forms with the characteristics of other ones!</p>
+                    <p>Gull-Tastrophe is a 3D funny action-adventure game that lets players act as a seagull to poop and
+                        create chaos everywhere. Enjoy life being a seagull and do whatever you want. The goal is to
+                        beat the human out of your home island!
+                    </p>
                 </div>
 
                 <!-- Project Overview Section -->
                 <div class="project-overview">
                     <h2>Project Overview</h2>
-                    <p><strong>Role:</strong> Gameplay Programmer & UI Programmer</p>
-                    <p><strong>Team size:</strong> 13</p>
-                    <p><strong>Engine:</strong> Unity</p>
+                    <p><strong>Role:</strong> Gameplay Programmer & Game Designer</p>
+                    <p><strong>Team size:</strong> 6</p>
+                    <p><strong>Engine:</strong> Unreal 5</p>
+                    <p>I pitched this game and was green-lit by the program advisor. I was responsible for
+                        system/gameplay programming and game design.</p>
                 </div>
             </div>
         </div>
@@ -77,107 +80,92 @@
             <h2>Contributions</h2>
 
             <!-- Item System Contribution -->
-            <h3>Item System</h3>
-            <p>In Dracomaton, items add variety to the gameplay by giving players positive or negative effects that
-                impact their abilities and strategy.</p>
-            <p>I set up the item system’s foundation, including how new items are created, how each item’s unique
-                effects work, and how these effects are applied to the player. Using Unity’s
-                <strong>ScriptableObjects</strong>, I
-                created a <code>BaseItem</code> class as the core for all items, establishing shared behaviors, such as
-                cooldown management, while allowing specific items to have custom logic. This setup uses
-                <strong>inheritance</strong> and
-                <strong>polymorphism</strong> to make the item framework both scalable and adaptable.
+            <h3>Game Progression</h3>
+            <p>In Gull-Tastrophe, I was responsible for designing and implementing the Warning Level System and the
+                Event System, both of which are essential to the game's progression mechanics. The warning level
+                dynamically adjusts game difficulty, while the event system increases the warning level.</p>
+            <h4>Warning Level System</h4>
+            <p>The Warning Level System is key to game progression, as it dynamically changes the game’s difficulty by
+                spawning more enemies, changing enemies' behavior, etc. To ensure flexibility and scalability, I
+                designed the system to be highly modular and abstract, enabling it to integrate with other game systems.
             </p>
-
+            <p>The system uses Event dispatchers to hook into related systems; for example, when the warning level
+                increases, the Building System spawns more NPCs, and the UI System displays a banner. The warning level
+                can be triggered by various in-game events, allowing it to affect multiple gameplay systems without
+                redundant referencing.</p>
             <!-- Contribution Image with Interactive Effect -->
             <div class="contribution-image-container">
-                <img src="images/ItemOverview.png" alt="Resource System Example" class="contribution-image" />
-                <p class="image-caption">Resource Management System for organizing in-game assets.</p>
+                <img src="images/WarningLevel.gif" alt="Warning Level Example" class="contribution-image" />
+                <img src="images/LevelManager.png" alt="Warning Level Example" class="contribution-image" />
             </div>
-
-            <p>To handle stat changes, I used a <stong>composition</stong> approach with <code>StatsModifier</code>
-                collections that
-                manage each item's status and stats modifiers. These modifiers are dynamically applied or removed when
-                items are equipped, allowing for flexible adjustments to player stats like damage or health.</p>
-
-            <p>Since designers would be working with items too, I designed the system to be easy to adjust directly in
-                Unity’s Inspector. This setup lets designers test and fine-tune item strength just by changing values in
-                the Inspector, making it faster to balance items without needing to touch the code.</p>
+            <h3>Event System</h3>
+            <p>Handling different in-game events was tough, so I needed to build a solid and flexible system. My
+                solution is to use a Data Table structure to store all the in-game events and an Event Manager to handle
+                registration and processing efficiently. Events are categorized into three types: Normal Events, where
+                scores are added directly to the warning level; Count Events, where scores accumulate only after the
+                event has occurred a certain number of times; and Combo Events, where scores are stored temporarily and
+                added when triggered by specific conditions</p>
             <div class="contribution-image-container">
-                <img src="images/ItemInspector.png" alt="Resource System Example" class="contribution-image" />
+                <img src="images/NormalEvent.gif" alt="Event System Example" class="contribution-image" />
+                <img src="images/CountEvent.gif" alt="Event System Example" class="contribution-image" />
+            </div>
+            <p>The centralized Event Manager registers events from various Blueprints and determines their type based on
+                the Event Struct, using this categorization to decide how and when to add scores, making the process
+                simpler of introducing new events or modifying existing ones. This approach minimizes conditional checks
+                and avoids major modifications to the system when scaling or adding features.
+            </p>
+            <div class="contribution-image-container">
+                <img src="images/DataTable.png" alt="Event System Example" class="contribution-image" />
+                <img src="images/EventManager.png" alt="Event System Example" class="contribution-image" />
             </div>
             <!-- <div class="contribution-image">
                 <img src="images/ItemInspector.png" alt="Item System Example" />
             </div> -->
             <!-- Resource System Contribution -->
-            <h3>Resource System</h3>
-            <p>In Dracomaton, random items and rewards appear in different scenarios, such as shops or as rewards after
-                clearing rooms. To manage these dynamic elements efficiently, I developed a <strong>Resource Management
-                    System</strong>
-                as a central controller for all in-game assets, including UI icons, items, VFX, and more. This system
-                acts as a flexible helper function, simplifying resource organization and retrieval for both the
-                <strong>Reward
-                    System</strong> and the <strong>Shop System</strong>.
+            <h3>Destructible System</h3>
+            <p>In Gull-Tastrophe, there are two types of destructible that players can destroy by either dashing or
+                pooping. Each destructible has a specific amount of health and spawns rewards upon being destroyed.
             </p>
-            <p>The <code>ResourcesManager.cs</code> is a singleton class that loads various resources (like prefabs)
-                from project folders into organized lists when the game starts. To keep the codebase clear and
-                maintainable, I used a <strong>partial class</strong> structure that separates each resource type into
-                its own manager.
-                This structure allows for easy access to specific resources through dedicated functions, making it
-                simple to spawn any item as needed. Additionally, each resource manager operates independently, so
-                programmers can create and manage single resource types without cluttering a primary script.</p>
-                <div class="contribution-image-container">
-                    <img src="images/rmscript.png" alt="Resource System Example" class="contribution-image" />
-                    <img src="images/ResourcesManager.png" alt="Resource System Example" class="contribution-image" />
-                </div>
+            <h4>Base Destructible Class</h4>
+            <p>TTo handle the shared logic for destructibles, I created a Base Destructible Class that all destructible
+                types inherit from. This class manages common functionality such as triggering explosion effects and
+                spawning rewards. I set up a Box Collider inside the base destructible Blueprint to handle damage
+                detection and combined Physics Fields with Geometry Collections to create visual explosion effects.
+            </p>
+            <!-- <div class="contribution-image-container">
+                <img src="images/rmscript.png" alt="Resource System Example" class="contribution-image" />
+                <img src="images/ResourcesManager.png" alt="Resource System Example" class="contribution-image" />
+            </div> -->
+            <h4>Individual Destructible Types</h4>
             <!-- Reward System Contribution -->
-            <h3>Reward System</h3>
-            <p>In Dracomaton, players receive different rewards based on the type of room they complete. For example,
-                completing a health room grants a health potion. As the game progresses, various room types appear, each
-                offering unique rewards.</p>
-            <p>I created a <strong>Reward Spawner</strong> object that stores different reward prefabs, enabling dynamic
-                and specific
-                item drops.</p>
-            <p> When a room is cleared, the Reward Spawner selects the appropriate reward type and checks
-                for nearby available tiles to place the reward. Since tile maps are grid-based, I searched the tiles in
-                a <strong>Spiral Pattern</strong> outward from the player within a specific range. This will help find
-                the nearest
-                available tile by only checking necessary tiles.</p>
-                <div class="contribution-image-container">
-                    <img src="images/rewardSpawners.png" alt="Resource System Example" class="contribution-image" />
-                    <img src="images/SpiralPattern.png" alt="Resource System Example" class="contribution-image" />
-                    <img src="images/dc10.gif" alt="Resource System Example" class="contribution-image" />
-                </div>
-            <p>I implemented a responsive and event-driven reward system using <strong>UnityEvents</strong> and
-                <strong>delegates</strong>. This
-                approach enables the reward spawner to be triggered directly by room events, reducing redundant
-                references and keeping the code structure clean and modular.
+            <p>Each destructible type extends the base class and adds unique behavior. For example: Destructible Police
+                Station, Destructible Jar, Destructible Car. Using inheritance allows for easy adjustments and
+                modifications of individual destructibles while keeping the shared logic centralized.
             </p>
+            <div class="contribution-image-container">
+                <img src="images/PoliceStation.gif" alt="Resource System Example" class="contribution-image" />
+                <img src="images/Small.gif" alt="Resource System Example" class="contribution-image" />
+            </div>
+            <h4>Building System and Falling Logic</h4>
+            <p>
+                In the game, destructibles can be stacked on top of each other. Destroying one causes the ones above it
+                to fall and shift down. To optimize performance, I implemented a "faked" physics system for this effect,
+                using animations and mathematical calculations instead of real-time physics simulations.
+                The Falling Logic is
+                1. When a block is destroyed, it checks for an upper neighbor.
+                2. If an upper neighbor exists, it recursively calls the Fall Event, setting the current block's
+                position
+                as the target location for the neighbor to fall to.
+                3.This process continues until no neighbors are found.
 
-            <!-- Shop System Subtitle -->
-            <h4>Shop System</h4>
-            <p>For the Shop System, I was responsible for setting up three items in each shop room, providing players
-                with varied options every time they entered. To achieve this, I created a Shop Item Position Prefab that
-                can be easily placed anywhere in the scene. I also made a dynamic system that allows each shop item
-                position to spawn either randomized or fixed items. The shop system also uses weighted randomization for
-                shop item generation, making rarer items less likely to appear.</p>
-                <div class="contribution-image-container">
-                    <img src="images/ShopItemController.png" alt="Resource System Example" class="contribution-image" />
-                    <img src="images/dc9.gif" alt="Resource System Example" class="contribution-image" />
-                </div>
-            <!-- Mod Menu Subtitle -->
-            <h4>Mod Menu</h4>
-            <p>In Dracomaton, the Mod Menu is a key part of the game’s UI, built to handle two slot types: Form Slots
-                (upper) and Mod Slots (lower). The menu allows players to customize their setup by dragging and swapping
-                forms and mods between these slots.</p>
-            <p>To make sure the UI changes reflected in the gameplay, I used Unity’s Drag and Drop (IDropHandler,
-                IBeginDragHandler, and IDragHandler) Interface with a custom Draggable Item class. I structured the
-                slots into Form Slot and Mod Slots to simplify tracking and syncing the UI with the player's actual
-                equipment status. If an item can’t be equipped, the system displays visual cues to guide the player.</p>
-                <div class="contribution-image-container">
-                    <img src="images/dc6.gif" alt="Resource System Example" class="contribution-image" />
-                    <img src="images/dc7.gif" alt="Resource System Example" class="contribution-image" />
-                </div>
+            </p>
+            <div class="contribution-image-container">
+                <img src="images/BuildingFalling.png" alt="Resource System Example" class="contribution-image" />
+                <img src="images/BuildingFalling.gif" alt="Resource System Example" class="contribution-image" />
+            </div>
+            <p>This approach provides greater control over the falling style and distance while being much cheaper in
+                terms of performance compared to real-time physics simulations.
+            </p>
         </div>
     </section>
     <footer id="footer"></footer>
