--- a/Dracomaton.html
+++ b/Dracomaton.html
@@ -126,10 +126,10 @@
                 This structure allows for easy access to specific resources through dedicated functions, making it
                 simple to spawn any item as needed. Additionally, each resource manager operates independently, so
                 programmers can create and manage single resource types without cluttering a primary script.</p>
-                <div class="contribution-image-container">
+                <!-- <div class="contribution-image-container">
                     <img src="images/rmscript.png" alt="Resource System Example" class="contribution-image" />
                     <img src="images/ResourcesManager.png" alt="Resource System Example" class="contribution-image" />
-                </div>
+                </div> -->
             <!-- Reward System Contribution -->
             <h3>Reward System</h3>
             <p>In Dracomaton, players receive different rewards based on the type of room they complete. For example,
@@ -145,7 +145,7 @@
                 available tile by only checking necessary tiles.</p>
                 <div class="contribution-image-container">
                     <img src="images/rewardSpawners.png" alt="Resource System Example" class="contribution-image" />
-                    <img src="images/SpiralPattern.png" alt="Resource System Example" class="contribution-image" />
+                    <!-- <img src="images/SpiralPattern.png" alt="Resource System Example" class="contribution-image" /> -->
                     <img src="images/dc10.gif" alt="Resource System Example" class="contribution-image" />
                 </div>
             <p>I implemented a responsive and event-driven reward system using <strong>UnityEvents</strong> and
