video setting update

--- a/AlertTheCity.html
+++ b/AlertTheCity.html
@@ -32,14 +32,14 @@
         <div class="project-header">
             <h1 class="project-name"> Alert The City (2024)</h1>
             <p class="project-role"> Gameplay & UI Programmer</p>
-            <a href="https://ucsc-wildfire-games.itch.io/alert-the-city" target="_blank" class="play-button">Play
+            <a href="https://ucsc-wildfire-games.itch.io/firewise-citizens" target="_blank" class="play-button">Play
                 Now</a>
         </div>
         <!-- Media and Info Container for Flex Layout -->
         <div class="media-info-container">
             <!-- Main Media Section (Video) -->
             <div class="project-media">
-                <video autoplay loop controls class="media-video">
+                <video autoplay loop muted controls preload="none" class="media-video">
                     <source src="video/AlertTheCity.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
