--- a/Dracomaton.html
+++ b/Dracomaton.html
@@ -40,7 +40,7 @@
         <div class="media-info-container">
             <!-- Main Media Section (Video) -->
             <div class="project-media">
-                <video autoplay loop controls class="media-video">
+                <video autoplay loop muted controls preload="none" class="media-video">
                     <source src="video/dracomaton.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
